--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.0",
+    "redux-devtools-extension": "^2.13.9",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19",
     "yup": "^0.32.11"
